revert back to old ModuleManager code